--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 :root {
     --primary-color: #531c86;
     --highlight-color: #c079e0;
-    --background-color: #dac4e4;
+    --background-color: #dacdf5;
 }
 
 body {
